--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3000
-MongoDB_URI=mongodb://localhost:27017/firstauth
-JWT_SECRET=your_jwt_secret_key
+MongoDB_URI=MONGO_URI=mongodb+srv://vivian:passwordxyt@backend.44kldom.mongodb.net/firstauth?retryWrites=true&w=majority
+JWT_SECRET=74373hgdj38dh123889fhhejdh36jfmf**7bfjhdgbj2233304482hftendg3hdjhfjfjh9023
 JWT_EXPIRATION=1h
-REDIS_URL=redis://localhost:6379
+# REDIS_URL=redis://localhost:6379
