--- a/.env
+++ b/.env
@@ -1,5 +1,24 @@
-PORT=3000
-MongoDB_URI=MONGO_URI=mongodb+srv://vivian:passwordxyt@backend.44kldom.mongodb.net/firstauth?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://vivian:passwordxyt@backend.44kldom.mongodb.net/firstauth?retryWrites=true&w=majority
+
 JWT_SECRET=74373hgdj38dh123889fhhejdh36jfmf**7bfjhdgbj2233304482hftendg3hdjhfjfjh9023
 JWT_EXPIRATION=1h
 # REDIS_URL=redis://localhost:6379
+EMAIL_HOST=smtp.gmail.com
+EMAIL_PORT=587
+EMAIL_SECURE=false
+EMAIL_USER=ilechukwuvivian0@gmail.com
+EMAIL_PASS=hjyv bxdv wmbd mqas
+#EMAIL_PASS=your-app-password
+GOOGLE_CLIENT_ID=97143825739-tb1ua53lmq2s3ea9iqqkrhki4s2ah9m2.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/auth/google/callback
+CLOUDINARY_CLOUD_NAME=djnvftumx
+CLOUDINARY_API_KEY=473546511229672
+CLOUDINARY_API_SECRET=**********
+# Frontend Configuration (for redirects)
+FRONTEND_URL=http://localhost:3001
+# Application Configuration
+PORT=3000
+NODE_ENV=development
+# Flutterwave Configuration
+FLW_SECRET_KEY=YIBg7znqkh64DQVJbafnRJkyL7p9syWs
