--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "firstauth",
   "version": "1.0.0",
@@ -11,7 +12,9 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.11.0",
     "bcryptjs": "^3.0.2",
+    "cloudinary": "^1.41.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "google-auth-library": "^10.1.0",
@@ -19,6 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "morgan": "^1.10.0",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.4",
     "uuid": "^11.1.0"
   }
