--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "firstauth",
   "version": "1.0.0",
@@ -17,6 +16,7 @@
     "cloudinary": "^1.41.3",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "flutterwave-node-v3": "^1.3.0",
     "google-auth-library": "^10.1.0",
     "googleapis": "^152.0.0",
     "jsonwebtoken": "^9.0.2",
